migration-result/ver/16.x/database-access/guides/mysql-self-hosted.mdx
---
title: Database Access with Self-Hosted MySQL/MariaDB
description: How to configure Teleport database access with self-hosted MySQL/MariaDB.
version: '16.x'
---

Teleport can provide secure access to MySQL or MariaDB via the  [Teleport Database
Service](/ver/16.x/database-access/introduction). This allows for
fine-grained access control through [Teleport's RBAC](/ver/16.x/database-access/rbac).

In this guide, you will:

1. Configure an MySQL or MariaDB database with mutual TLS authentication.
2. Join the MySQL or MariaDB database to your Teleport cluster.
3. Connect to the MySQL or MariaDB database via the Teleport Database Service.

<Tabs>
  <Tab title="Self-Hosted">
    ![Teleport Database Access MySQL Self-Hosted](../../../../../assets/mysql_selfhosted-d615f792f5.png)
  </Tab>

  <Tab title="Teleport Enterprise Cloud">
    ![Teleport Database Access MySQL Cloud](../../../../../assets/mysql_cloud-ef053baa79.png)
  </Tab>
</Tabs>

## Prerequisites

<Tabs>
  <Tab title="Teleport Community Edition">
    - A running Teleport cluster. For details on how to set this up, see the
      [Getting Started](/ver/16.x/index) guide.

    - The `tctl` admin tool and `tsh` client tool version >= 15.0.0-dev.

      See [Installation](/ver/16.x/installation) for details.

    To check version information, run the `tctl version` and `tsh version` commands.
    For example:

    ```code
    $ tctl version
    # Teleport v15.0.0-dev git:api/14.0.0-gd1e081e go1.21
      
    $ tsh version
    # Teleport v15.0.0-dev go1.21
    Proxy version: 15.0.0-dev
    Proxy: teleport.example.com
    ```
  </Tab>

  <Tab title="Teleport Team">
    - A Teleport Team account. If you don't have an account, sign
      up to begin your [free trial](https://goteleport.com/signup/).

    - The Enterprise `tctl` admin tool and `tsh` client tool, version >= 14.3.3.

      You can download these tools from the [Cloud Downloads page](/ver/16.x/choose-an-edition/teleport-cloud/downloads).

    To check version information, run the `tctl version` and `tsh version` commands.
    For example:

    ```code
    $ tctl version
    # Teleport Enterprise v14.3.3 git:api/14.0.0-gd1e081e go1.21
      
    $ tsh version
    # Teleport v14.3.3 go1.21
    Proxy version: 14.3.3
    Proxy: teleport.example.com
    ```
  </Tab>

  <Tab title="Teleport Enterprise">
    - A running Teleport Enterprise cluster. For details on how to set this up, see the Enterprise
      [Getting Started](/ver/16.x/choose-an-edition/teleport-enterprise/introduction) guide.

    - The Enterprise `tctl` admin tool and `tsh` client tool version >=
      15.0.0-dev.

      You can download these tools by visiting your [Teleport
      account workspace](https://teleport.sh).

    To check version information, run the `tctl version` and `tsh version` commands.
    For example:

    ```code
    $ tctl version
    # Teleport Enterprise v15.0.0-dev git:api/14.0.0-gd1e081e go1.21
      
    $ tsh version
    # Teleport v15.0.0-dev go1.21
    Proxy version: 15.0.0-dev
    Proxy: teleport.example.com
    ```
  </Tab>

  <Tab title="Teleport Enterprise Cloud">
    - A Teleport Enterprise Cloud account. If you don't have an account,
      sign up to begin a [free trial](https://goteleport.com/signup/)  of Teleport Team
      and upgrade to Teleport Enterprise Cloud.

    - The Enterprise `tctl` admin tool and `tsh` client tool version >= 14.3.3.

      You can download these tools from the [Cloud Downloads page](/ver/16.x/choose-an-edition/teleport-cloud/downloads).

    To check version information, run the `tctl version` and `tsh version` commands.
    For example:

    ```code
    $ tctl version
    # Teleport Enterprise v14.3.3 git:api/14.0.0-gd1e081e go1.21
      
    $ tsh version
    # Teleport v14.3.3 go1.21
    Proxy version: 14.3.3
    Proxy: teleport.example.com
    ```
  </Tab>
</Tabs>

- A self-hosted MySQL or MariaDB instance.
- A host, e.g., an Amazon EC2 instance, where you will run the Teleport Database
  Service.
- To check that you can connect to your Teleport cluster, sign in with `tsh login`, then
  verify that you can run `tctl` commands using your current credentials.
  `tctl` is supported on macOS and Linux machines.

  For example:
  ```code
  $ tsh login --proxy=teleport.example.com --user=email@example.com
  $ tctl status
  # Cluster  teleport.example.com
  # Version  15.0.0-dev
  # CA pin   sha256:abdc1245efgh5678abdc1245efgh5678abdc1245efgh5678abdc1245efgh5678
  ```
  If you can connect to the cluster and run the `tctl status` command, you can use your
  current credentials to run subsequent `tctl` commands from your workstation.
  If you host your own Teleport cluster, you can also run `tctl` commands on the computer that
  hosts the Teleport Auth Service for full permissions.

## Step 1/4. Create the Teleport Database Token

The Database Service requires a valid auth token to connect to the cluster. Generate
one by running the following command against your Teleport Auth Service and save
it in `/tmp/token` on the node that will run the Database Service:

```code
$ tctl tokens add --type=db
```

## Step 2/4. Create a certificate/key pair

Teleport uses mutual TLS authentication with self-hosted databases. These
databases must be configured with Teleport's certificate authority to be
able to verify client certificates. They also need a certificate/key pair that
Teleport can verify.

If you are using Teleport Cloud, your Teleport user must be allowed to
impersonate the system role `Db` in order to be able to generate the database
certificate.

Include the following `allow` rule in in your Teleport Cloud user's role:

```yaml
allow:
  impersonate:
    users: ["Db"]
    roles: ["Db"]
```

From your local workstation, create the secrets:

```code
# Export Teleport's certificate authority and generate certificate/key pair
# for host db.example.com with a 3-month validity period.
$ tctl auth sign --format=db --host=db.example.com --out=server --ttl=2190h
```

In this example, `db.example.com` is the hostname where the Teleport Database
Service can reach the MySQL server.

<Note>
  We recommend using a shorter TTL, but keep mind that you'll need to update the
  database server certificate before it expires to not lose the ability to
  connect. Pick the TTL value that best fits your use-case.
</Note>

The command will create 3 files: `server.cas`, `server.crt` and `server.key`
which you'll need to enable mutual TLS on your MySQL server. Copy these files
to the environment running MySQL

## Step 3/4. Configure MySQL/MariaDB

<Tabs>
  <Tab title="MySQL">
    To configure MySQL to accept TLS connections, add the following to your
    MySQL configuration file, `mysql.cnf`:

    ```conf
    [mysqld]
    require_secure_transport=ON
    ssl-ca=/path/to/server.cas
    ssl-cert=/path/to/server.crt
    ssl-key=/path/to/server.key
    ```
  </Tab>

  <Tab title="MariaDB">
    To configure MariaDB to accept TLS connections, add the following to your
    MariaDB configuration file, `mysql.cnf`:

    ```conf
    [mariadb]
    require_secure_transport=ON
    ssl-ca=/path/to/server.cas
    ssl-cert=/path/to/server.crt
    ssl-key=/path/to/server.key
    ```
  </Tab>
</Tabs>

Additionally, your MySQL/MariaDB database user accounts must be configured to require a
valid client certificate.

<Tabs>
  <Tab title="New User">
    Create a new user:

    ```sql
    CREATE USER 'alice'@'%' REQUIRE SUBJECT '/CN=alice';
    ```

    By default, the created user may not have access to anything and won't be able
    to connect, so let's grant it some permissions:

    ```sql
    GRANT ALL ON `%`.* TO 'alice'@'%';
    ```

    <Warning>
      This is an example command that grants database-wide permissions to a user.
      In a production environment you should follow the principle of least privilege
    </Warning>
  </Tab>

  <Tab title="Existing User">
    Because Teleport uses certificates to authenticate database users, the user must
    not have a password set. Note that removing an existing user's password may break
    existing integrations. Consider using a new Database user specifically for Teleport
    access.

    Update the existing user to require a valid certificate:

    ```sql
    ALTER USER 'alice'@'%' REQUIRE SUBJECT '/CN=alice';
    ```

    Remove the password from the user:

    ```sql
    SET PASSWORD FOR 'alice'@'%' = PASSWORD("");
    ```
  </Tab>
</Tabs>

See
[Configuring MySQL to Use Encrypted Connections](https://dev.mysql.com/doc/refman/8.0/en/using-encrypted-connections.html)
in the MySQL documentation or
[Enabling TLS on MariaDB Server](https://mariadb.com/docs/security/encryption/in-transit/enable-tls-server/)
in the MariaDB documentation for more details.

### Create a Teleport user

<Tip>
  To modify an existing user to provide access to the Database Service, see [Database Access Access Controls](/ver/16.x/database-access/rbac)
</Tip>

<Tabs>
  <Tab title="Teleport Team/Community Edition">
    Create a local Teleport user with the built-in `access` role:

    ```code
    $ tctl users add \
      --roles=access \
      --db-users=\* \
      --db-names=\* \
      alice
    ```
  </Tab>

  <Tab title="Teleport Enterprise/Enterprise Cloud">
    Create a local Teleport user with the built-in `access` and `requester` roles:

    ```code
    $ tctl users add \
      --roles=access,requester \
      --db-users=\* \
      --db-names=\* \
      alice
    ```
  </Tab>
</Tabs>

| Flag         | Description                                                                                                                              |
| ------------ | ---------------------------------------------------------------------------------------------------------------------------------------- |
| `--roles`    | List of roles to assign to the user. The builtin `access` role allows them to connect to any database server registered with Teleport.   |
| `--db-users` | List of database usernames the user will be allowed to use when connecting to the databases. A wildcard allows any user.                 |
| `--db-names` | List of logical databases (aka schemas) the user will be allowed to connect to within a database server. A wildcard allows any database. |

<Warning>
  Database names are only enforced for PostgreSQL and MongoDB databases.
</Warning>

For more detailed information about database access controls and how to restrict
access see [RBAC](/ver/16.x/database-access/rbac) documentation.

### Configure and Start the Database Service

Install and configure Teleport where you will run the Teleport Database Service:

<Tabs>
  <Tab title="Linux Server">
    Select an edition, then follow the instructions for that edition to install Teleport.

    <Tabs dropdownView dropdownCaption="Teleport Edition">
      <Tab title="Teleport Community Edition">
        The following command updates the repository for the package manager on the
        local operating system and installs the provided Teleport version:

        ```code
        $ curl https://goteleport.com/static/install.sh | bash -s 15.0.0-dev
        ```
      </Tab>

      <Tab title="Teleport Team">
        <Tabs>
          <Tab title="Debian 9+/Ubuntu 16.04+ (apt)">
            Add the Teleport repository to your repository list:

            ```code
            # Download Teleport's PGP public key
            $ sudo curl https://apt.releases.teleport.dev/gpg \
            -o /usr/share/keyrings/teleport-archive-keyring.asc
            # Source variables about OS version
            $ source /etc/os-release
            # Add the Teleport APT repository for cloud.
            $ echo "deb [signed-by=/usr/share/keyrings/teleport-archive-keyring.asc] \
            https://apt.releases.teleport.dev/${ID?} ${VERSION_CODENAME?} stable/cloud" \
            | sudo tee /etc/apt/sources.list.d/teleport.list > /dev/null

            $ sudo apt-get update
            $ sudo apt-get install teleport-ent=14.3.3
            $ sudo apt-get install teleport-ent-updater
            ```
          </Tab>

          <Tab title="Amazon Linux 2/RHEL 7/CentOS 7 (yum)">
            ```code
            # Source variables about OS version
            $ source /etc/os-release
            # Add the Teleport YUM repository for cloud.
            # First, get the OS major version from $VERSION_ID so this fetches the correct
            # package version.
            $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
            $ sudo yum install -y yum-utils
            $ sudo yum-config-manager --add-repo "$(rpm --eval "https://yum.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/cloud/teleport-yum.repo")"
            $ sudo yum install teleport-ent-14.3.3
            $ sudo yum install teleport-ent-updater
            #
            # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
            # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
            ```
          </Tab>

          <Tab title="Amazon Linux 2023/RHEL 8+ (dnf)">
            ```code
            # Source variables about OS version
            $ source /etc/os-release
            # Add the Teleport YUM repository for cloud.
            # First, get the OS major version from $VERSION_ID so this fetches the correct
            # package version.
            $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
            # Use the dnf config manager plugin to add the teleport RPM repo
            $ sudo dnf config-manager --add-repo "$(rpm --eval "https://yum.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/cloud/teleport-yum.repo")"

            # Install teleport
            $ sudo dnf install teleport-ent-14.3.3
            $ sudo dnf install teleport-ent-updater

            # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
            # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
            ```
          </Tab>

          <Tab title="SLES 12 SP5+ and 15 SP5+ (zypper)">
            ```code
            # Source variables about OS version
            $ source /etc/os-release
            # Add the Teleport Zypper repository for cloud.
            # First, get the OS major version from $VERSION_ID so this fetches the correct
            # package version.
            $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
            # Use Zypper to add the teleport RPM repo
            $ sudo zypper addrepo --refresh --repo $(rpm --eval "https://zypper.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/cloud/teleport-zypper.repo")

            # Install teleport
            $ sudo zypper install teleport-ent=14.3.3
            $ sudo zypper install teleport-ent-updater
            ```
          </Tab>
        </Tabs>

        ### OS repository channels

        The following channels are available for APT, YUM, and Zypper repos. They may be used in place of
        `stable/v15` anywhere in the Teleport documentation.

        | Channel name     | Description                                                                  |
        | ---------------- | ---------------------------------------------------------------------------- |
        | `stable/<major>` | Receives releases for the specified major release line, i.e. `v15`           |
        | `stable/cloud`   | Rolling channel that receives releases compatible with current Cloud version |
        | `stable/rolling` | Rolling channel that receives all published Teleport releases                |

        <Accordion title="Is my Teleport instance compatible with Teleport Team?">
          Before installing a `teleport` binary with a version besides
          v14, read our compatibility rules to ensure that the
          binary is compatible with Teleport Cloud.

          Teleport uses [Semantic Versioning](https://semver.org/). Version numbers
          include a major version, minor version, and patch version, separated by dots.
          When running multiple `teleport` binaries within a cluster, the following rules
          apply:

          - **Patch and minor** versions are always compatible, for example, any 8.0.1
            component will work with any 8.0.3 component and any 8.1.0 component will work
            with any 8.3.0 component.
          - Servers support clients that are one major version behind, but do not support
            clients that are on a newer major version. For example, an 8.x.x Proxy Service
            instance is compatible with 7.x.x agents and 7.x.x `tsh`, but we don't
            guarantee that a 9.x.x agent will work with an 8.x.x Proxy Service instance.
            This also means you must not attempt to upgrade from 6.x.x straight to 8.x.x.
            You must upgrade to 7.x.x first.
          - Proxy Service instances and agents do not support Auth Service instances that
            are on an older major version, and will fail to connect to older Auth Service
            instances by default. You can override version checks by passing
            `--skip-version-check` when starting agents and Proxy Service instances.
        </Accordion>
      </Tab>

      <Tab title="Teleport Enterprise">
        <Tabs>
          <Tab title="Debian 9+/Ubuntu 16.04+ (apt)">
            ```code
            # Download Teleport's PGP public key
            $ sudo curl https://apt.releases.teleport.dev/gpg \
            -o /usr/share/keyrings/teleport-archive-keyring.asc
            # Source variables about OS version
            $ source /etc/os-release
            # Add the Teleport APT repository for v15. You'll need to update this
            # file for each major release of Teleport.
            $ echo "deb [signed-by=/usr/share/keyrings/teleport-archive-keyring.asc] \
            https://apt.releases.teleport.dev/${ID?} ${VERSION_CODENAME?} stable/v15" \
            | sudo tee /etc/apt/sources.list.d/teleport.list > /dev/null

            $ sudo apt-get update
            $ sudo apt-get install teleport-ent
            ```

            For FedRAMP/FIPS-compliant installations, install the `teleport-ent-fips` package instead:

            ```code
            $ sudo apt-get install teleport-ent-fips
            ```
          </Tab>

          <Tab title="Amazon Linux 2/RHEL 7 (yum)">
            ```code
            # Source variables about OS version
            $ source /etc/os-release
            # Add the Teleport YUM repository for v15. You'll need to update this
            # file for each major release of Teleport.
            # First, get the major version from $VERSION_ID so this fetches the correct
            # package version.
            $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
            $ sudo yum install -y yum-utils
            $ sudo yum-config-manager --add-repo "$(rpm --eval "https://yum.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/v15/teleport.repo")"
            $ sudo yum install teleport-ent
            #
            # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
            # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
            ```

            For FedRAMP/FIPS-compliant installations, install the `teleport-ent-fips` package instead:

            ```code
            $ sudo yum install teleport-ent-fips
            ```
          </Tab>

          <Tab title="Amazon Linux 2/RHEL 7 (zypper)">
            ```code
            # Source variables about OS version
            $ source /etc/os-release
            # Add the Teleport Zypper repository for v15. You'll need to update this
            # file for each major release of Teleport.
            # First, get the OS major version from $VERSION_ID so this fetches the correct
            # package version.
            $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
            # Use zypper to add the teleport RPM repo
            $ sudo zypper addrepo --refresh --repo $(rpm --eval "https://zypper.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/cloud/teleport-zypper.repo")
            $ sudo yum install teleport-ent
            #
            # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
            # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
            ```

            For FedRAMP/FIPS-compliant installations, install the `teleport-ent-fips` package instead:

            ```code
            $ sudo yum install teleport-ent-fips
            ```
          </Tab>

          <Tab title="Amazon Linux 2023/RHEL 8+ (dnf)">
            ```code
            # Source variables about OS version
            $ source /etc/os-release
            # Add the Teleport YUM repository for v15. You'll need to update this
            # file for each major release of Teleport.
            # First, get the major version from $VERSION_ID so this fetches the correct
            # package version.
            $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
            # Use the dnf config manager plugin to add the teleport RPM repo
            $ sudo dnf config-manager --add-repo "$(rpm --eval "https://yum.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/v15/teleport.repo")"

            # Install teleport
            $ sudo dnf install teleport-ent

            # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
            # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
            ```

            For FedRAMP/FIPS-compliant installations, install the `teleport-ent-fips` package instead:

            ```code
            $ sudo dnf install teleport-ent-fips
            ```
          </Tab>

          <Tab title="SLES 12 SP5+ and 15 SP5+ (zypper)">
            ```code
            # Source variables about OS version
            $ source /etc/os-release
            # Add the Teleport Zypper repository.
            # First, get the OS major version from $VERSION_ID so this fetches the correct
            # package version.
            $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
            # Use Zypper to add the teleport RPM repo
            $ sudo zypper addrepo --refresh --repo $(rpm --eval "https://zypper.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/v15/teleport-zypper.repo")

            # Install teleport
            $ sudo zypper install teleport-ent
            ```

            For FedRAMP/FIPS-compliant installations, install the `teleport-ent-fips` package instead:

            ```code
            $ sudo zypper install teleport-ent-fips
            ```
          </Tab>

          <Tab title="Tarball">
            In the example commands below, update `$SYSTEM_ARCH` with the appropriate
            value (`amd64`, `arm64`, or `arm`). All example commands using this variable
            will update after one is filled out.

            ```code
            $ curl https://get.gravitational.com/teleport-ent-v15.0.0-dev-linux-$SYSTEM_ARCH-bin.tar.gz.sha256
            # <checksum> <filename>
            $ curl -O https://cdn.teleport.dev/teleport-ent-v15.0.0-dev-linux-$SYSTEM_ARCH-bin.tar.gz
            $ shasum -a 256 teleport-ent-v15.0.0-dev-linux-$SYSTEM_ARCH-bin.tar.gz
            # Verify that the checksums match
            $ tar -xvf teleport-ent-v15.0.0-dev-linux-$SYSTEM_ARCH-bin.tar.gz
            $ cd teleport-ent
            $ sudo ./install
            ```

            For FedRAMP/FIPS-compliant installations of Teleport Enterprise, package URLs
            will be slightly different:

            ```code
            $ curl https://get.gravitational.com/teleport-ent-v15.0.0-dev-linux-$SYSTEM_ARCH-fips-bin.tar.gz.sha256
            # <checksum> <filename>
            $ curl -O https://cdn.teleport.dev/teleport-ent-v15.0.0-dev-linux-$SYSTEM_ARCH-fips-bin.tar.gz
            $ shasum -a 256 teleport-ent-v15.0.0-dev-linux-$SYSTEM_ARCH-fips-bin.tar.gz
            # Verify that the checksums match
            $ tar -xvf teleport-ent-v15.0.0-dev-linux-$SYSTEM_ARCH-fips-bin.tar.gz
            $ cd teleport-ent
            $ sudo ./install
            ```
          </Tab>
        </Tabs>

        ### OS repository channels

        The following channels are available for APT, YUM, and Zypper repos. They may be used in place of
        `stable/v15` anywhere in the Teleport documentation.

        | Channel name     | Description                                                                  |
        | ---------------- | ---------------------------------------------------------------------------- |
        | `stable/<major>` | Receives releases for the specified major release line, i.e. `v15`           |
        | `stable/cloud`   | Rolling channel that receives releases compatible with current Cloud version |
        | `stable/rolling` | Rolling channel that receives all published Teleport releases                |
      </Tab>

      <Tab title="Teleport Enterprise Cloud">
        <Tabs>
          <Tab title="Debian 9+/Ubuntu 16.04+ (apt)">
            Add the Teleport repository to your repository list:

            ```code
            # Download Teleport's PGP public key
            $ sudo curl https://apt.releases.teleport.dev/gpg \
            -o /usr/share/keyrings/teleport-archive-keyring.asc
            # Source variables about OS version
            $ source /etc/os-release
            # Add the Teleport APT repository for cloud.
            $ echo "deb [signed-by=/usr/share/keyrings/teleport-archive-keyring.asc] \
            https://apt.releases.teleport.dev/${ID?} ${VERSION_CODENAME?} stable/cloud" \
            | sudo tee /etc/apt/sources.list.d/teleport.list > /dev/null

            $ sudo apt-get update
            $ sudo apt-get install teleport-ent=14.3.3
            $ sudo apt-get install teleport-ent-updater
            ```
          </Tab>

          <Tab title="Amazon Linux 2/RHEL 7/CentOS 7 (yum)">
            ```code
            # Source variables about OS version
            $ source /etc/os-release
            # Add the Teleport YUM repository for cloud.
            # First, get the OS major version from $VERSION_ID so this fetches the correct
            # package version.
            $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
            $ sudo yum install -y yum-utils
            $ sudo yum-config-manager --add-repo "$(rpm --eval "https://yum.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/cloud/teleport-yum.repo")"
            $ sudo yum install teleport-ent-14.3.3
            $ sudo yum install teleport-ent-updater
            #
            # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
            # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
            ```
          </Tab>

          <Tab title="Amazon Linux 2023/RHEL 8+ (dnf)">
            ```code
            # Source variables about OS version
            $ source /etc/os-release
            # Add the Teleport YUM repository for cloud.
            # First, get the OS major version from $VERSION_ID so this fetches the correct
            # package version.
            $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
            # Use the dnf config manager plugin to add the teleport RPM repo
            $ sudo dnf config-manager --add-repo "$(rpm --eval "https://yum.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/cloud/teleport-yum.repo")"

            # Install teleport
            $ sudo dnf install teleport-ent-14.3.3
            $ sudo dnf install teleport-ent-updater

            # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
            # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
            ```
          </Tab>

          <Tab title="SLES 12 SP5+ and 15 SP5+ (zypper)">
            ```code
            # Source variables about OS version
            $ source /etc/os-release
            # Add the Teleport Zypper repository for cloud.
            # First, get the OS major version from $VERSION_ID so this fetches the correct
            # package version.
            $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
            # Use Zypper to add the teleport RPM repo
            $ sudo zypper addrepo --refresh --repo $(rpm --eval "https://zypper.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/cloud/teleport-zypper.repo")

            # Install teleport
            $ sudo zypper install teleport-ent=14.3.3
            $ sudo zypper install teleport-ent-updater
            ```
          </Tab>
        </Tabs>

        ### OS repository channels

        The following channels are available for APT, YUM, and Zypper repos. They may be used in place of
        `stable/v15` anywhere in the Teleport documentation.

        | Channel name     | Description                                                                  |
        | ---------------- | ---------------------------------------------------------------------------- |
        | `stable/<major>` | Receives releases for the specified major release line, i.e. `v15`           |
        | `stable/cloud`   | Rolling channel that receives releases compatible with current Cloud version |
        | `stable/rolling` | Rolling channel that receives all published Teleport releases                |

        <Accordion title="Is my Teleport instance compatible with Teleport Enterprise Cloud?">
          Before installing a `teleport` binary with a version besides v14,
          read our compatibility rules to ensure that the binary is compatible with
          Teleport Enterprise Cloud.

          Teleport uses [Semantic Versioning](https://semver.org/). Version numbers
          include a major version, minor version, and patch version, separated by dots.
          When running multiple `teleport` binaries within a cluster, the following rules
          apply:

          - **Patch and minor** versions are always compatible, for example, any 8.0.1
            component will work with any 8.0.3 component and any 8.1.0 component will work
            with any 8.3.0 component.
          - Servers support clients that are one major version behind, but do not support
            clients that are on a newer major version. For example, an 8.x.x Proxy Service
            instance is compatible with 7.x.x agents and 7.x.x `tsh`, but we don't
            guarantee that a 9.x.x agent will work with an 8.x.x Proxy Service instance.
            This also means you must not attempt to upgrade from 6.x.x straight to 8.x.x.
            You must upgrade to 7.x.x first.
          - Proxy Service instances and agents do not support Auth Service instances that
            are on an older major version, and will fail to connect to older Auth Service
            instances by default. You can override version checks by passing
            `--skip-version-check` when starting agents and Proxy Service instances.
        </Accordion>
      </Tab>
    </Tabs>

    On the host where you will run the Teleport Database Service, start Teleport
    with the appropriate configuration.

    Note that a single Teleport process can run multiple different services, for
    example multiple Database Service agents as well as the SSH Service or Application
    Service. The step below will overwrite an existing configuration file, so if
    you're running multiple services add `--output=stdout` to print the config in
    your terminal, and manually adjust `/etc/teleport.yaml`.

    Generate a configuration file at `/etc/teleport.yaml` for the Database Service:

    <Tabs>
      <Tab title="Teleport Enterprise/Enterprise Cloud">
        ```code
        $ sudo teleport db configure create \
           -o file \
           --token=/tmp/token \
           --proxy=teleport.example.com:443 \
           --name=example-mysql \
           --protocol=mysql \
           --uri=mysql.example.com:3306 \
           --labels=env=dev 
        ```
      </Tab>

      <Tab title="Teleport Team/Community Edition">
        ```code
        $ sudo teleport db configure create \
           -o file \
           --token=/tmp/token \
           --proxy=mytenant.teleport.sh:443 \
           --name=example-mysql \
           --protocol=mysql \
           --uri=mysql.example.com:3306 \
           --labels=env=dev
        ```
      </Tab>
    </Tabs>

    Configure the Teleport Database Service to start automatically when the host boots up by
    creating a systemd service for it. The instructions depend on how you installed
    the Teleport Database Service.

    <Tabs>
      <Tab title="Package Manager">
        On the host where you will run the Teleport Database Service, enable and start Teleport:

        ```code
        $ sudo systemctl enable teleport
        $ sudo systemctl start teleport
        ```
      </Tab>

      <Tab title="TAR Archive">
        On the host where you will run the Teleport Database Service, create a systemd service
        configuration for Teleport, enable the Teleport service, and start Teleport:

        ```code
        $ sudo teleport install systemd -o /etc/systemd/system/teleport.service
        $ sudo systemctl enable teleport
        $ sudo systemctl start teleport
        ```
      </Tab>
    </Tabs>

    You can check the status of the Teleport Database Service with `systemctl status teleport`
    and view its logs with `journalctl -fu teleport`.
  </Tab>

  <Tab title="Kubernetes Cluster">
    Teleport provides Helm charts for installing the Teleport Database Service in Kubernetes Clusters.

    Set up the Teleport Helm repository.

    Allow Helm to install charts that are hosted in the Teleport Helm repository:

    ```code
    $ helm repo add teleport https://charts.releases.teleport.dev
    ```

    Update the cache of charts from the remote repository so you can upgrade to all
    available releases:

    ```code
    $ helm repo update
    ```

    <Tabs>
      <Tab title="Self-Hosted">
        Install the Teleport Kube Agent into your Kubernetes Cluster
        with the Teleport Database Service configuration.

        ```code
        $ JOIN_TOKEN=$(cat /tmp/token)
        $ helm install teleport-kube-agent teleport/teleport-kube-agent \
          --create-namespace \
          --namespace teleport-agent \
          --set roles=db \
          --set proxyAddr=teleport.example.com:443 \
          --set authToken=${JOIN_TOKEN?} \
          --set "databases[0].name=example-mysql" \
          --set "databases[0].uri=mysql.example.com:3306" \
          --set "databases[0].protocol=mysql" \
          --set "labels.env=dev" \
          --version 15.0.0-dev
        ```
      </Tab>

      <Tab title="Cloud-Hosted">
        Install the Teleport Kube Agent into your Kubernetes Cluster
        with the Teleport Database Service configuration.

        ```code
        $ JOIN_TOKEN=$(cat /tmp/token)
        $ helm install teleport-kube-agent teleport/teleport-kube-agent \
          --create-namespace \
          --namespace teleport-agent \
          --set roles=db \
          --set proxyAddr=mytenant.teleport.sh:443 \
          --set authToken=${JOIN_TOKEN?} \
          --set "databases[0].name=example-mysql" \
          --set "databases[0].uri=mysql.example.com:3306" \
          --set "databases[0].protocol=mysql" \
          --set "labels.env=dev" \
          --version 14.3.3
        ```
      </Tab>
    </Tabs>

    Make sure that the Teleport agent pod is running. You should see one
    `teleport-kube-agent` pod with a single ready container:

    ```code
    $ kubectl -n teleport-agent get pods
    NAME                    READY   STATUS    RESTARTS   AGE
    teleport-kube-agent-0   1/1     Running   0          32s
    ```
  </Tab>
</Tabs>

<Tip>
  A single Teleport process can run multiple services, for example
  multiple Database Service instances as well as other services such the
  SSH Service or Application Service.
</Tip>

## Step 4/4. Connect

Once the Database Service has joined the cluster, log in to see the available
databases:

<Tabs>
  <Tab title="Self-Hosted">
    ```code
    $ tsh login --proxy=teleport.example.com --user=alice
    $ tsh db ls
    # Name          Description   Labels
    # ------------- ------------- --------
    # example-mysql Example MySQL env=dev
    ```
  </Tab>

  <Tab title="Teleport Enterprise Cloud">
    ```code
    $ tsh login --proxy=mytenant.teleport.sh --user=alice
    $ tsh db ls
    # Name          Description   Labels
    # ------------- ------------- --------
    # example-mysql Example MySQL env=dev
    ```
  </Tab>
</Tabs>

Note that you will only be able to see databases your role has access to. See
the [RBAC](/ver/16.x/database-access/rbac) guide for more details.

To retrieve credentials for a database and connect to it:

```code
$ tsh db connect --db-user=root --db-name=mysql example-mysql
```

<Note>
  The `mysql` or `mariadb` command-line client should be available in `PATH` in order to be
  able to connect. `mariadb` is a default command-line client for MySQL and MariaDB.
</Note>

To log out of the database and remove credentials:

```code
# Remove credentials for a particular database instance.
$ tsh db logout example-mysql
# Remove credentials for all database instances.
$ tsh db logout
```
